Fix galaxy s5 not fitting all currencies on mobile menu

--- a/src/targets/stGiles/styles/views/Menu/mobile.less
+++ b/src/targets/stGiles/styles/views/Menu/mobile.less
@@ -8,7 +8,7 @@
 
   .Menu__items--item {
     font-size: 18px;
-    line-height: 45px;
+    line-height: 39px;
   }
 
   .Menu__items--highlight {
